[package]
name = "guessthesong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
urlencoding = "2.1.2"
serde_json = "1.0.79"
tungstenite = "0.18.0"
tokio-tungstenite = "0.18.0"
parking_lot = "0.12.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
http = "0.2.8" # To interact with tungstenite
tokio = { version = "1.27.0", features = ["net", "rt", "rt-multi-thread", "sync", "time"] }
futures = "0.3.27" # to interact with tokio-tungstenite
fastrand = "1.9.0"
