[package]
name = "guessthesong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tiny_http = "0.12.0"
# percent-encoding = "2.2.0" # Using this instead of urlencoding because it's already in dep tree
serde_json = "1.0.79"
# tungstenite = "0.18.0"
# tokio-tungstenite = "0.18.0"
parking_lot = "0.12.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
# http = "0.2.8" # To interact with tungstenite
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.27" # to interact with tokio-tungstenite
fastrand = "1.9.0"
# form_urlencoded = "1.1.0"
axum = { version = "0.6.18", features = ["headers", "ws"] }
tower-http = { version = "0.4.0", features = ["fs", "redirect"] }
tower = { version = "0.4.13" }
rspotify = "0.11.7"
regex = "1.8.1"
once_cell = "1.17.1"
levenshtein = "1.0.5"
dotenv = "0.15.0"
